* An admin or report viewer can download the CSV file reports using firefox and IE
* Xacml policy permissions have been refactored
* Mime-type detection has been refactored for PDF files

Deployment notes:
* Update fedora policies under FEDORA_HOME to branch:
- staging: https://svn.library.emory.edu/svn/fedora/repository-policies/branches/etd_1.8.x
- production: https://svn.library.emory.edu/svn/fedora/repository-policies/trunk
* Remove honors_collection section from config.xml
 * Remove collections section from config.xml
 * Add etd-db.xml as specified in etd-db.xml.example file
 * Run the following migrations / scripts
 * 015a-add-collection_program_owners.php - Change maintenance_account to use fedoraAdmin for this migration then change back to etdmaint
-  create_collections.php
-  015-add-rollins-programs.php
-  016-add-prog_codes_to_skos.php - before running this script, 
    manually edit the config.xml defined programs_pid.
    Select the SKOS datastream for edit, then add this attribute to first line:
    xmlns:dc="http://purl.org/dc/elements/1.1/"
- DB/001-create_db_user_table.sql - See notes at top of script. You have to replace <DB NAME> and <PASSWORD> values.  Run this thru PHPMyAdmin
- DB/002-load_init_data.php

Version 1.7.3 - August 2010 (bugfix)
 * Fixed bug in etdSet code which caused email templates to not function correctly.
* Fixed bug in etd search filtering. 


Version 1.7.2 - August 2010 (bugfix)
 * Fixed bug in embargo_expiration script.

Version 1.7.3 - August 2010 (bugfix)
 * Fixed bug in etdSet code which caused email templates to not function correctly.
* Fixed bug in etd search filtering.

Version 1.7.2 - August 2010 (bugfix)
 * Fixed bug in embargo_expiration script.
 
Version 1.7.1 - August 2010 (bugfix)
 * Fixed bug in pagination code in searchController that caused results with one item to fail.
 * Changed link to ETD Help page on side nav.

Version 1.7 - August 2010 (enhancements)
